--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
 		"latex"
 	],
 	"cSpell.useGitignore": true,
-	"cSpell.enabled": true
+	"cSpell.enabled": true,
+	"cSpell.words": [
+		"SIMBAD"
+	]
 }
