Almost finished describing SDSS catalog for thesis use. Added SDSS telescope paper reference.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,12 @@
 	"cSpell.enabled": true,
 	"cSpell.words": [
 		"Astropy",
+		"Chrétien",
+		"Ritchey",
+		"sdss",
 		"SDSS",
 		"SIMBAD",
 		"Szkody"
-	]
+	],
+	"todo-tree.regex.regex": "((//|#|<!--|;|/\\*|^|%|\\\\)\\s*($TAGS)\\{*|^\\s*- \\[ \\])",
 }
