1st draft of Abstract

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,10 @@
 	"cSpell.useGitignore": true,
 	"cSpell.enabled": true,
 	"cSpell.words": [
+		"abrillantamiento",
 		"Astropy",
 		"Chrétien",
+		"Iturbide",
 		"Ritchey",
 		"sdss",
 		"SDSS",
