--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
 	"cSpell.enabled": true,
 	"cSpell.words": [
 		"abrillantamiento",
+		"acreción",
 		"Astropy",
 		"Chrétien",
 		"Iturbide",
+		"radiativa",
 		"Ritchey",
 		"sdss",
 		"SDSS",
