Intro progress: 1.1.2, 1.2.1 Finished first draft of "Clasificaciones Observacionales" subsubsection. Little more progress in "Evolucion" subsection.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 	"cSpell.words": [
 		"abrillantamiento",
 		"acreción",
+		"astrométrica",
+		"astrométricas",
 		"Astropy",
 		"Chrétien",
 		"Iturbide",
