--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,12 @@
 		"Chrétien",
 		"EBAI",
 		"eclipsante",
+		"eclipsantes",
 		"fillout",
+		"Heinze",
 		"Iturbide",
+		"Krisciunas",
+		"Manastash",
 		"ortogonalidad",
 		"protoestrella",
 		"radiativa",
