--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,15 +13,20 @@
 		"astrométricas",
 		"Astropy",
 		"Chrétien",
+		"Dall",
+		"DPAC",
 		"EBAI",
 		"eclipsante",
 		"eclipsantes",
 		"fillout",
 		"Heinze",
 		"Iturbide",
+		"Kirkham",
 		"Krisciunas",
 		"Manastash",
+		"monitoreo",
 		"ortogonalidad",
+		"planeación",
 		"protoestrella",
 		"radiativa",
 		"Ritchey",
