Added more words for VS Code spellcheck

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,18 +20,22 @@
 		"eclipsante",
 		"eclipsantes",
 		"fillout",
+		"granulación",
 		"Heinze",
 		"IRAF",
 		"IRSA",
 		"Iturbide",
 		"Kirkham",
 		"Krisciunas",
+		"Kurucz",
 		"Manastash",
+		"metalicidad",
 		"monitoreo",
 		"ortogonalidad",
 		"planeación",
 		"protoestrella",
 		"radiativa",
+		"Radiativas",
 		"Ritchey",
 		"sdss",
 		"SDSS",
