--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -21,10 +21,19 @@ jobs:
     steps:
       - name: Pull source
         uses: actions/checkout@v1
-        
-      - name: Upload to GitHub release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: JasonEtco/upload-to-release@master
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          args: build/Tesis.pdf
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "In progress document"
+          files: |
+            build/Tesis.pdf
+      
+      # - name: Upload to GitHub release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   uses: xresloader/upload-to-github-release@v1.5.0
+      #   with:
+      #     file: build/Tesis.pdf
