--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -1,7 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Upload To Github Release
-# uses: xresloader/upload-to-github-release@v1.5.0
 
 # Controls when the workflow will run
 on:
@@ -14,7 +11,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   upload-thesis-pdf:
     name: Upload built Tesis.pdf file to a new release
     runs-on: ubuntu-latest
@@ -27,13 +23,6 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: true
-          title: "In progress document"
+          title: "Thesis build"
           files: |
             build/Tesis.pdf
-      
-      # - name: Upload to GitHub release
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   uses: xresloader/upload-to-github-release@v1.5.0
-      #   with:
-      #     file: build/Tesis.pdf
