--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
 		"abrillantamiento",
 		"acreción",
 		"ADQL",
+		"asincrónicas",
+		"Asincrónicas",
 		"astrométrica",
 		"astrométricas",
 		"Astropy",
@@ -19,6 +21,7 @@
 		"EBAI",
 		"eclipsante",
 		"eclipsantes",
+		"Édouard",
 		"fillout",
 		"granulación",
 		"Heinze",
@@ -26,6 +29,7 @@
 		"IRSA",
 		"Iturbide",
 		"Kirkham",
+		"Kopal",
 		"Krisciunas",
 		"Kurucz",
 		"Lagrangiano",
@@ -38,9 +42,11 @@
 		"radiativa",
 		"Radiativas",
 		"Ritchey",
+		"rotacional",
 		"sdss",
 		"SDSS",
 		"SIMBAD",
+		"sincronicidad",
 		"subsección",
 		"superconjunción",
 		"Szkody",
