--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest-${{ env.GITHUB_RUN_NUMBER }}"
+          automatic_release_tag: "latest.${{ env.GITHUB_RUN_NUMBER }}"
           prerelease: true
           title: "Thesis build"
           files: |
