--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -9,6 +9,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  RELEASE_TAG: latest-${{ env.GITHUB_RUN_NUMBER }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   upload-thesis-pdf:
@@ -21,7 +24,7 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest-$GITHUB_RUN_NUMBER"
+          automatic_release_tag: $RELEASE_TAG
           prerelease: true
           title: "Thesis build"
           files: |
