--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -9,8 +9,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-env:
-  RELEASE_TAG: latest-${{ env.GITHUB_RUN_NUMBER }}
+# env:
+#   RELEASE_TAG: latest-$GITHUB_RUN_NUMBER
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,6 +18,9 @@ jobs:
     name: Upload built Tesis.pdf file to a new release
     runs-on: ubuntu-latest
     steps:
+      - name: Set release tag
+      - run: echo RELEASE_TAG:latest-${GITHUB_RUN_NUMBER} >> $GITHUB_ENV
+      
       - name: Pull source
         uses: actions/checkout@v1
 
