--- a/.github/workflows/release-pdf-build.yml
+++ b/.github/workflows/release-pdf-build.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "$RELEASE_TAG"
+          automatic_release_tag: ${{ env.RELEASE_TAG }}
           prerelease: true
           title: "Thesis build"
           files: |
