Completed forward model section of PHOEBE chapter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
 		"astrométricas",
 		"Astropy",
 		"Chrétien",
+		"convectiva",
 		"Dall",
 		"Devinney",
 		"DPAC",
@@ -23,6 +24,8 @@
 		"eclipsante",
 		"eclipsantes",
 		"Édouard",
+		"extrínseco",
+		"extrínsecos",
 		"fillout",
 		"granulación",
 		"Heinze",
@@ -38,13 +41,16 @@
 		"Manastash",
 		"metalicidad",
 		"monitoreo",
+		"muestrear",
 		"ortogonalidad",
+		"periastro",
 		"planeación",
 		"protoestrella",
 		"radiativa",
 		"Radiativas",
 		"Raphson",
 		"Ritchey",
+		"Rosseland",
 		"rotacional",
 		"sdss",
 		"SDSS",
