Finished parameter estimation section Working on PHOEBE design section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
 		"Krisciunas",
 		"Kurucz",
 		"Lagrangiano",
+		"Lomb",
 		"Lyrae",
 		"Manastash",
 		"metalicidad",
@@ -45,6 +46,7 @@
 		"muestrear",
 		"ortogonalidad",
 		"periastro",
+		"periodogram",
 		"planeación",
 		"protoestrella",
 		"radiativa",
@@ -53,6 +55,7 @@
 		"Ritchey",
 		"Rosseland",
 		"rotacional",
+		"Scargle",
 		"sdss",
 		"SDSS",
 		"SIMBAD",
