Added sections on the PHOEBE bundle structure and parameter optimizers Modified formatting for code excerpts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
 		"fillout",
 		"granulación",
 		"Heinze",
+		"heurístico",
 		"IRAF",
 		"IRSA",
 		"Iturbide",
@@ -43,15 +44,22 @@
 		"Manastash",
 		"metalicidad",
 		"monitoreo",
+		"muestreados",
 		"muestrear",
+		"Nelder",
+		"optimizador",
+		"optimizadores",
 		"ortogonalidad",
+		"pasabanda",
 		"periastro",
 		"periodogram",
 		"planeación",
+		"politopo",
 		"protoestrella",
 		"radiativa",
 		"Radiativas",
 		"Raphson",
+		"resolvedor",
 		"Ritchey",
 		"Rosseland",
 		"rotacional",
