Finished Introduction No revisions implemented yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,11 +15,14 @@
 		"astrométrica",
 		"astrométricas",
 		"Astropy",
+		"autocorrelación",
 		"Chrétien",
 		"convectiva",
 		"correlacionados",
+		"cuboide",
 		"Dall",
 		"Devinney",
+		"dimensionalidad",
 		"DPAC",
 		"EBAI",
 		"eclipsante",
@@ -31,6 +34,7 @@
 		"granulación",
 		"Heinze",
 		"heurístico",
+		"invarianza",
 		"IRAF",
 		"IRSA",
 		"Iturbide",
@@ -48,6 +52,7 @@
 		"muestreado",
 		"muestreados",
 		"muestrear",
+		"multivariada",
 		"Nelder",
 		"optimizador",
 		"optimizadores",
