Made corrections on chapter 4 from Dr. Andres comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
 		"Asincrónicas",
 		"astrométrica",
 		"astrométricas",
+		"astrométricos",
 		"Astropy",
 		"autocorrelación",
 		"Chrétien",
@@ -21,6 +22,7 @@
 		"correlacionados",
 		"cuboide",
 		"Dall",
+		"Datalink",
 		"Devinney",
 		"dimensionalidad",
 		"DPAC",
