Updated chapter 6 based on Dr. Andres comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
 		"eclipsante",
 		"eclipsantes",
 		"Édouard",
+		"espectroscopía",
 		"extrínseco",
 		"extrínsecos",
 		"fillout",
@@ -38,6 +39,7 @@
 		"fotómetros",
 		"fotósfera",
 		"granulación",
+		"Haleakalā",
 		"Heinze",
 		"heurístico",
 		"invarianza",
