Rewrote PHOEBE chapter up to optimization process Updated outdated graphs Started MCMC methodology TODO: prior distributions, pending results from current MCMC run

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
 		"astrométricos",
 		"Astropy",
 		"autocorrelación",
+		"Bayesiano",
 		"Chrétien",
+		"constreñimiento",
 		"convectiva",
 		"correlacionados",
 		"cuboide",
