First draft of Modelo Computacional chapter finished

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,11 +17,16 @@
 		"astrométricos",
 		"Astropy",
 		"autocorrelación",
+		"autocovarianza",
 		"Bayesiano",
+		"Chávez",
 		"Chrétien",
 		"constreñimiento",
 		"convectiva",
+		"correlacionadas",
+		"correlacionado",
 		"correlacionados",
+		"covarianza",
 		"cuboide",
 		"Dall",
 		"Datalink",
@@ -57,6 +62,8 @@
 		"Lomb",
 		"Lyrae",
 		"Manastash",
+		"marginaliza",
+		"marginalizando",
 		"MCMC",
 		"metalicidad",
 		"monitoreo",
@@ -66,11 +73,15 @@
 		"multibanda",
 		"multivariada",
 		"Nelder",
+		"Opteron",
 		"optimizador",
 		"optimizadores",
 		"ortogonalidad",
+		"paralelizable",
+		"paralelización",
 		"pasabanda",
 		"pasabandas",
+		"Pech",
 		"periastro",
 		"periodogram",
 		"planeación",
