Re-format thesis according to UANL style In-progress conclusion advancements for PHOEBE model considerations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
 		"eclipsante",
 		"eclipsantes",
 		"Édouard",
+		"enfocador",
 		"espectroscopía",
 		"extrínseco",
 		"extrínsecos",
@@ -104,6 +105,7 @@
 		"superconjunción",
 		"Szkody",
 		"transmisividad",
+		"UANL",
 		"visualizador",
 		"ZAMS",
 		"Zwicky"
