Finished conclusion first draft Incorporated Dr. Aviles comments Fleshed out chapter 9 results sections Updated graphs and tables with most up to date results

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
 		"Krisciunas",
 		"Kurucz",
 		"Lagrangiano",
+		"Landolt",
 		"Lomb",
 		"Lyrae",
 		"Manastash",
@@ -101,6 +102,7 @@
 		"SDSS",
 		"SIMBAD",
 		"sincronicidad",
+		"STARRS",
 		"subsección",
 		"superconjunción",
 		"Szkody",
