Added beginning abstract and conclusions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
 		"muestreados",
 		"muestrear",
 		"multibanda",
+		"multimodal",
 		"multivariada",
 		"Nelder",
 		"Opteron",
@@ -105,6 +106,7 @@
 		"STARRS",
 		"subsección",
 		"superconjunción",
+		"suplementar",
 		"Szkody",
 		"transmisividad",
 		"UANL",
